<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsScreenActivity">

    <LinearLayout style="@style/ScreenHeaderLayout">

        <ImageButton
            android:id="@+id/setting_home_button"
            style="@style/ScreenHeaderButton"
            android:importantForAccessibility="no"
            android:src="@drawable/back_arrow"
            app:tint="?attr/colorOnSecondary" />

        <TextView
            style="@style/ScreenHeaderText"
            android:text="@string/settings_button" />
    </LinearLayout>

    <LinearLayout style="@style/ScreenOption"
        android:id="@+id/setting_dark_theme_button">


        <TextView
            style="@style/ScreenOptionText"
            android:text="@string/dark_theme_switcher" />

        <Switch
            style="@style/ScreenOptionImage"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout style="@style/ScreenOption"
        android:id="@+id/sharing_app_button">

        <TextView
            style="@style/ScreenOptionText"
            android:text="@string/share_app" />

        <ImageButton
            style="@style/ScreenOptionImage"
            android:importantForAccessibility="no"
            android:src="@drawable/share" />
    </LinearLayout>

    <LinearLayout style="@style/ScreenOption"
        android:id="@+id/support_button">

        <TextView
            style="@style/ScreenOptionText"
            android:text="@string/support_button" />

        <ImageButton
            style="@style/ScreenOptionImage"
            android:importantForAccessibility="no"
            android:src="@drawable/support" />
    </LinearLayout>

    <LinearLayout style="@style/ScreenOption"
        android:id="@+id/terms_of_use_button">

        <TextView
            style="@style/ScreenOptionText"
            android:text="@string/terms_of_use" />

        <ImageButton
            style="@style/ScreenOptionImage"
            android:importantForAccessibility="no"
            android:src="@drawable/arrow_forward" />
    </LinearLayout>
</LinearLayout>