<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SettingsScreenActivity"
    >


        <TextView
            style="@style/ScreenHeaderText"
            android:layout_marginBottom="@dimen/margin_biggest_16dp"
            android:text="@string/search_menu_button" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout style="@style/SearchBarLayout">

            <EditText
                android:id="@+id/search_bar"
                style="@style/SearchBar"
                android:drawableStart="@drawable/search_icon"
                android:hint="@string/search_menu_button"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:singleLine="true"
                tools:ignore="RtlSymmetry" />

            <ImageButton
                android:id="@+id/clear_button"
                style="@style/ClearButton"
                android:importantForAccessibility="no"
                android:src="@drawable/clear_button_cross"
                android:visibility="gone"
                app:tint="?attr/on_shape_back_ground" />
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="148dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/track_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/track_view"
            android:layout_marginTop="@dimen/margin_biggest_16dp" />

        <LinearLayout
            android:id="@+id/history_place_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="42dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/place_notification_text"
                android:textSize="19sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/clean_history_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="?attr/on_prime_color"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/place_holder_button"
                android:textColor="?attr/prime_color"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/placeholder_image"
                style="@style/placeholder_image"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/placeholder_text"
                style="@style/placeholder_text" />

            <Button
                android:id="@+id/placeholder_button"
                style="@style/placeholder_button"
                android:text="@string/place_holder_button" />
        </LinearLayout>


    </FrameLayout>


</LinearLayout>