<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toStartOf="@+id/left_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow"
        app:tint="?attr/colorOnPrimary" />

    <ImageView
        android:id="@+id/player_cover"
        android:layout_width="312dp"
        android:layout_height="312dp"
        android:layout_marginTop="26dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/player_track_name"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/menu_button"
        tools:src="@drawable/placeholder" />

    <TextView
        android:id="@+id/player_track_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size_big_22sp"
        app:layout_constraintBottom_toTopOf="@id/player_artist_name"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_cover"
        tools:text="TrackName" />

    <TextView
        android:id="@+id/player_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/player_add_button"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_track_name"
        tools:text="ArtistName" />

    <ImageButton
        android:id="@+id/player_add_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="54dp"
        android:layout_marginBottom="74dp"
        android:background="@drawable/add_button"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@id/duration_text"

        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_artist_name" />

    <ImageView
        android:id="@+id/player_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/play_button"
        app:layout_constraintBottom_toBottomOf="@id/player_add_button"
        app:layout_constraintEnd_toStartOf="@id/player_like_button"
        app:layout_constraintStart_toEndOf="@id/player_add_button"
        app:layout_constraintTop_toTopOf="@id/player_add_button" />

    <ImageButton
        android:id="@+id/player_like_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/like_button"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/player_play_button"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"

        app:layout_constraintTop_toTopOf="@id/player_play_button" />

    <TextView
        android:id="@+id/player_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small_4dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/player_track_length"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_play_button" />

    <TextView
        android:id="@+id/duration_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_biggest_16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/player_track_duration"
        android:textColor="@color/dark_gray_background"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/album_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_duration" />

    <TextView
        android:id="@+id/duration_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_biggest_16dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/duration_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/duration_text"
        tools:text="2:40" />

    <TextView
        android:id="@+id/album_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_biggest_16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/player_track_album_name"
        android:textColor="@color/dark_gray_background"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/year_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration_text" />

    <TextView
        android:id="@+id/album_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_biggest_16dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/album_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/album_text"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Звезда сковорода" />

    <TextView
        android:id="@+id/year_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_biggest_16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/player_year_info"
        android:textColor="@color/dark_gray_background"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/ganre_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_text" />

    <TextView
        android:id="@+id/year_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_biggest_16dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/year_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/year_text"
        tools:text="1973" />

    <TextView
        android:id="@+id/ganre_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_biggest_16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/player_genre_info"
        android:textColor="@color/dark_gray_background"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/country_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_text" />

    <TextView
        android:id="@+id/ganre_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_biggest_16dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ganre_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ganre_text"
        tools:text="2:40" />

    <TextView
        android:id="@+id/country_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_biggest_16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/player_country_info"
        android:textColor="@color/dark_gray_background"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ganre_text" />

    <TextView
        android:id="@+id/country_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_biggest_16dp"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/country_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/country_text"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Г-поп" />


</androidx.constraintlayout.widget.ConstraintLayout>